fix dark mode in projects

--- a/src/styles/Projects.module.scss
+++ b/src/styles/Projects.module.scss
@@ -22,7 +22,8 @@
 		background-color: $d-dark;
 	}
 
-	.title {
+	.title,
+	p {
 		color: $off-white;
 	}
 }
